--- a/src/app/templates/home-sidebar/home-sidebar.component.css
+++ b/src/app/templates/home-sidebar/home-sidebar.component.css
@@ -7,7 +7,7 @@
 
 .content-section {
   min-height: 61em;
-  background-color: aliceblue;
+  background-color: white;
   background-position: cover;
   background-size: cover;
   position: relative;
