修正 template, 改用假資料

--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -1,6 +1,6 @@
 .login-section {
   min-height: 61em;
-  background-color: aliceblue;
+  background-color: white;
   background-position: cover;
   background-size: cover;
   position: relative;
