--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -15,7 +15,7 @@
       <!-- 右邊表單 -->
       <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
         <form [formGroup]="form">
-          <h1 class="title"><b>復健訓練管理系統</b></h1>
+          <h1 class="title"><b>模板測試系統</b></h1>
           <!-- account input -->
           <div class="form-outline mb-4">
             <label class="form-label">帳號</label>
