--- a/src/app/templates/home-sidebar/home-sidebar.component.css
+++ b/src/app/templates/home-sidebar/home-sidebar.component.css
@@ -1,5 +1,5 @@
 .sidenav-section {
-  background-color: grey;
+  background-color: rgb(170, 170, 170);
   color: white;
   min-width: 13em;
   text-align: center;
@@ -12,4 +12,59 @@
   background-size: cover;
   position: relative;
   color: black;
+}
+
+.matPanelText {
+  min-width: 80%;
+  color: white;
+  margin-left: 2em;
+  text-align: center;
+  align-items: center;
+  display: flex;
+}
+
+.matPanelSymbol {
+  color: white;
+  margin-left: 1em;
+  align-items: center;
+  display: flex;
+}
+
+.mat-expansion-panel-header {
+  padding-left: 0px !important;
+  padding-top: 1px !important;
+  padding-bottom: 1px !important;
+  background-color: rgb(80, 80, 80);
+}
+
+.mat-expansion-panel.mat-expanded .mat-expansion-panel-header {
+  background-color: rgb(15, 15, 15);
+}
+
+.mat-expansion-panel .mat-expansion-panel-header:hover,
+.mat-expansion-panel.mat-expanded .mat-expansion-panel-header:hover {
+  background-color: rgb(50, 50, 50);
+}
+
+::ng-deep .mat-expansion-panel-body {
+  background-color: rgb(250, 250, 250);
+}
+
+::ng-deep .mat-expansion-panel-body .mat-list-item-content:hover {
+  background-color: rgb(210, 210, 210);
+}
+
+.my-report-font {
+  width: 100%;
+  color: white;
+  font-weight: bold;
+}
+
+.my-report-icon {
+  color: white;
+}
+
+::ng-deep .mat-list-item-content .focus {
+  color: rgb(247, 140, 0);
+  font-weight: bold;
 }
