--- a/src/app/templates/round-card/round-card.component.html
+++ b/src/app/templates/round-card/round-card.component.html
@@ -2,14 +2,14 @@
   <h2 class="text-center col-12 text-light"><b>{{title}}</b></h2>
   <div class="col-12 bg-light rounded-pill my-2 text-center" *ngFor="let c of content">
     <div class="row">
-      <div class="col-sm-6">
+      <div class="col-lg-5 text-center">
         <h3 class="m-0 py-3"><b>{{c.description}}</b></h3>
       </div>
-      <div class="col-sm-4 text-left">
+      <div class="col-lg-4 text-center">
         <h3 class="m-0 py-3">{{c.value}}</h3>
       </div>
-      <div class="col-sm-2 text-left">
-        <h3 class="m-0 py-3" [innerHTML]="c.type"></h3>
+      <div class="col-lg-3 text-center">
+        <h3 class="m-0 py-3" [innerHTML]="c.iconHtml"></h3>
       </div>
     </div>
   </div>
