--- a/src/app/templates/pwa-install/pwa-install.component.html
+++ b/src/app/templates/pwa-install/pwa-install.component.html
@@ -1,6 +1,6 @@
 <div class="myAlert-bottom alert alert-dark alert-dismissible fade show" role="alert" *ngIf="showButton">
-  <strong>是否安裝 app 至裝置？&nbsp;</strong>
-  <button type="button" class="btn btn-outline-dark" (click)="addToHomeScreen()">Install</button>
+  <strong>是否安裝 app 至裝置？</strong>
+  <button type="button" class="btn btn-outline-secondary" (click)="addToHomeScreen()">Install</button>
   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
     <span aria-hidden="true">&times;</span>
   </button>
